<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutAddTagContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/add_tag_fa"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/imageAddTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageAddTag"
        app:layout_constraintTop_toTopOf="@id/imageAddTag"/>

    <ImageView
        android:id="@+id/imageAddTag"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="340dp"
        android:layout_marginLeft="340dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_bookmark"
        android:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/inputTag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/add_tag_here_fa"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/imageAddTag"/>

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add_fa"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTag"/>


    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel_fa"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputTag"/>

</androidx.constraintlayout.widget.ConstraintLayout>