<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutAddItemContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/add_listitem_fa"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/imageAddItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageAddItem"
        app:layout_constraintTop_toTopOf="@id/imageAddItem"/>

    <ImageView
        android:id="@+id/imageAddItem"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="340dp"
        android:layout_marginLeft="340dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        android:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/inputListItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/add_item_here_fa"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/imageAddItem"/>

    <ImageView
        android:id="@+id/imageAddDate"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="340dp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_date"
        android:tint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/textAdd"
        app:layout_constraintTop_toTopOf="@id/itemDate"
        app:layout_constraintLeft_toRightOf="@id/itemDate"/>

    <TextView
        android:id="@+id/itemDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/add_date_fa"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/inputListItem"/>


    <ImageView
        android:id="@+id/imageAddTime"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="340dp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_clock"
        android:tint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/textAdd"
        app:layout_constraintTop_toTopOf="@id/itemTime"
        app:layout_constraintLeft_toRightOf="@id/itemTime"/>

    <TextView
        android:id="@+id/itemTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/add_time_fa"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/itemDate"/>



    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add_fa"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemTime"/>


    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel_fa"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/itemTime"/>

</androidx.constraintlayout.widget.ConstraintLayout>