<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CheckListFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_myNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_alignParentRight="true"
        android:fontFamily="@font/vazir_bold"
        android:includeFontPadding="false"
        android:text="@string/to_do_list_fa"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_below="@id/tv_myNotes"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        >

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            android:tint="@color/colorSearchIcon"/>

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_todolist_fa"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checkListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:layout_below="@id/layoutSearch"
        android:layout_alignBottom="@id/layoutQuickAction"/>

    <LinearLayout
        android:id="@+id/layoutQuickAction"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:layout_alignParentBottom="true">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddListMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        android:tint="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_35sdp"/>




</RelativeLayout>